close issue #4 close issue #5

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -344,6 +344,11 @@
             </tr>
         </table>
         {{/ifDieUsed}}
+
+        <br>
+        <div>
+            <button type="button" data-action="refresh">Refresh Stats</button>
+        </div>
     </div>
 
 
