--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -16,10 +16,10 @@
 
         {{#ifDieUsed TOTAL_ROLLS.[0] }} <!-- Associated Helper in Main -->
         <h1 class="dice-type-title">D-2 (COIN) Stats</h1>
-        <div id = "d2Chart" class="chart-dice-stats"></div>
+        <div id = "d2ChartGlobal" class="chart-dice-stats"></div>
         <table>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MIN_PLAYER.[0]}} <!-- Associated Helper in Main -->
+                {{#ifRolledCrit ROLLED_MOST_MIN_ROLLCOUNT.[0]}} <!-- Associated Helper in Main -->
                     <td>Most Rolled 1's</td>
                     <td><b>{{ROLLED_MOST_MIN_PLAYER.[0]}}</b> with <b>{{ROLLED_MOST_MIN_ROLLCOUNT.[0]}}</b> Rolls</td>
                 {{else}}
@@ -28,7 +28,7 @@
                 {{/ifRolledCrit}}
             </tr>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MAX_PLAYER.[0]}}
+                {{#ifRolledCrit ROLLED_MOST_MAX_ROLLCOUNT.[0]}}
                     <td>Most Rolled 2's</td>
                     <td><b>{{ROLLED_MOST_MAX_PLAYER.[0]}}</b> with <b>{{ROLLED_MOST_MAX_ROLLCOUNT.[0]}}</b> Rolls</td>
                 {{else}}
@@ -66,10 +66,10 @@
 
         {{#ifDieUsed TOTAL_ROLLS.[1] }}
         <h1>D-3 (Fate) Stats</h1>
-        <div id = "d3Chart" class="chart-dice-stats"></div>
+        <div id = "d3ChartGlobal" class="chart-dice-stats"></div>
         <table>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MIN_PLAYER.[1]}}
+                {{#ifRolledCrit ROLLED_MOST_MIN_ROLLCOUNT.[1]}}
                     <td>Most Rolled 1's</td>
                     <td><b>{{ROLLED_MOST_MIN_PLAYER.[1]}}</b> with <b>{{ROLLED_MOST_MIN_ROLLCOUNT.[1]}}</b> Rolls</td>
                 {{else}}
@@ -78,7 +78,7 @@
                 {{/ifRolledCrit}}
             </tr>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MAX_PLAYER.[1]}}
+                {{#ifRolledCrit ROLLED_MOST_MAX_ROLLCOUNT.[1]}}
                     <td>Most Rolled 3's</td>
                     <td><b>{{ROLLED_MOST_MAX_PLAYER.[1]}}</b> with <b>{{ROLLED_MOST_MAX_ROLLCOUNT.[1]}}</b> Rolls</td>
                 {{else}}
@@ -116,10 +116,10 @@
         
         {{#ifDieUsed TOTAL_ROLLS.[2] }}
         <h1>D-4 Stats</h1>
-        <div id = "d4Chart" class="chart-dice-stats"></div>
+        <div id = "d4ChartGlobal" class="chart-dice-stats"></div>
         <table>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MIN_PLAYER.[2]}}
+                {{#ifRolledCrit ROLLED_MOST_MIN_ROLLCOUNT.[2]}}
                     <td>Most Rolled 1's</td>
                     <td><b>{{ROLLED_MOST_MIN_PLAYER.[2]}}</b> with <b>{{ROLLED_MOST_MIN_ROLLCOUNT.[2]}}</b> Rolls</td>
                 {{else}}
@@ -128,7 +128,7 @@
                 {{/ifRolledCrit}}
             </tr>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MAX_PLAYER.[2]}}
+                {{#ifRolledCrit ROLLED_MOST_MAX_ROLLCOUNT.[2]}}
                     <td>Most Rolled 4's</td>
                     <td><b>{{ROLLED_MOST_MAX_PLAYER.[2]}}</b> with <b>{{ROLLED_MOST_MAX_ROLLCOUNT.[2]}}</b> Rolls</td>
                 {{else}}
@@ -166,10 +166,10 @@
         
         {{#ifDieUsed TOTAL_ROLLS.[3] }}
         <h1>D-6 Stats</h1>
-        <div id = "d6Chart" class="chart-dice-stats"></div>
+        <div id = "d6ChartGlobal" class="chart-dice-stats"></div>
         <table>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MIN_PLAYER.[3]}}
+                {{#ifRolledCrit ROLLED_MOST_MIN_ROLLCOUNT.[3]}}
                     <td>Most Rolled 1's</td>
                     <td><b>{{ROLLED_MOST_MIN_PLAYER.[3]}}</b> with <b>{{ROLLED_MOST_MIN_ROLLCOUNT.[3]}}</b> Rolls</td>
                 {{else}}
@@ -178,7 +178,7 @@
                 {{/ifRolledCrit}}
             </tr>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MAX_PLAYER.[3]}}
+                {{#ifRolledCrit ROLLED_MOST_MAX_ROLLCOUNT.[3]}}
                     <td>Most Rolled 6's</td>
                     <td><b>{{ROLLED_MOST_MAX_PLAYER.[3]}}</b> with <b>{{ROLLED_MOST_MAX_ROLLCOUNT.[3]}}</b> Rolls</td>
                 {{else}}
@@ -216,10 +216,10 @@
         
         {{#ifDieUsed TOTAL_ROLLS.[4] }}
         <h1>D-8 Stats</h1>
-        <div id = "d8Chart" class="chart-dice-stats"></div>
+        <div id = "d8ChartGlobal" class="chart-dice-stats"></div>
         <table>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MIN_PLAYER.[4]}}
+                {{#ifRolledCrit ROLLED_MOST_MIN_ROLLCOUNT.[4]}}
                     <td>Most Rolled 1's</td>
                     <td><b>{{ROLLED_MOST_MIN_PLAYER.[4]}}</b> with <b>{{ROLLED_MOST_MIN_ROLLCOUNT.[4]}}</b> Rolls</td>
                 {{else}}
@@ -228,7 +228,7 @@
                 {{/ifRolledCrit}}
             </tr>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MAX_PLAYER.[4]}}
+                {{#ifRolledCrit ROLLED_MOST_MAX_ROLLCOUNT.[4]}}
                     <td>Most Rolled 8's</td>
                     <td><b>{{ROLLED_MOST_MAX_PLAYER.[4]}}</b> with <b>{{ROLLED_MOST_MAX_ROLLCOUNT.[4]}}</b> Rolls</td>
                 {{else}}
@@ -266,10 +266,10 @@
         
         {{#ifDieUsed TOTAL_ROLLS.[5] }}
         <h1>D-10 Stats</h1>
-        <div id = "d10Chart" class="chart-dice-stats"></div>
+        <div id = "d10ChartGlobal" class="chart-dice-stats"></div>
         <table>
            <tr>
-                {{#ifRolledCrit ROLLED_MOST_MIN_PLAYER.[5]}}
+                {{#ifRolledCrit ROLLED_MOST_MIN_ROLLCOUNT.[5]}}
                     <td>Most Rolled 1's</td>
                     <td><b>{{ROLLED_MOST_MIN_PLAYER.[5]}}</b> with <b>{{ROLLED_MOST_MIN_ROLLCOUNT.[5]}}</b> Rolls</td>
                 {{else}}
@@ -278,7 +278,7 @@
                 {{/ifRolledCrit}}
             </tr>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MAX_PLAYER.[5]}}
+                {{#ifRolledCrit ROLLED_MOST_MAX_ROLLCOUNT.[5]}}
                     <td>Most Rolled 10's</td>
                     <td><b>{{ROLLED_MOST_MAX_PLAYER.[5]}}</b> with <b>{{ROLLED_MOST_MAX_ROLLCOUNT.[5]}}</b> Rolls</td>
                 {{else}}
@@ -316,10 +316,10 @@
         
         {{#ifDieUsed TOTAL_ROLLS.[6] }}
         <h1>D-12 Stats</h1>
-        <div id = "d12Chart" class="chart-dice-stats"></div>
+        <div id = "d12ChartGlobal" class="chart-dice-stats"></div>
         <table>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MIN_PLAYER.[6]}}
+                {{#ifRolledCrit ROLLED_MOST_MIN_ROLLCOUNT.[6]}}
                     <td>Most Rolled 1's</td>
                     <td><b>{{ROLLED_MOST_MIN_PLAYER.[6]}}</b> with <b>{{ROLLED_MOST_MIN_ROLLCOUNT.[6]}}</b> Rolls</td>
                 {{else}}
@@ -328,7 +328,7 @@
                 {{/ifRolledCrit}}
             </tr>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MAX_PLAYER.[6]}}
+                {{#ifRolledCrit ROLLED_MOST_MAX_ROLLCOUNT.[6]}}
                     <td>Most Rolled 12's</td>
                     <td><b>{{ROLLED_MOST_MAX_PLAYER.[6]}}</b> with <b>{{ROLLED_MOST_MAX_ROLLCOUNT.[6]}}</b> Rolls</td>
                 {{else}}
@@ -366,10 +366,10 @@
         
         {{#ifDieUsed TOTAL_ROLLS.[7] }}
         <h1 class="dice-type-title">D-20 Stats</h1>
-        <div id = "d20Chart" class="chart-dice-stats"></div>
+        <div id = "d20ChartGlobal" class="chart-dice-stats"></div>
         <table>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MIN_PLAYER.[7]}}
+                {{#ifRolledCrit ROLLED_MOST_MIN_ROLLCOUNT.[7]}}
                     <td>Most Rolled 1's</td>
                     <td><b>{{ROLLED_MOST_MIN_PLAYER.[7]}}</b> with <b>{{ROLLED_MOST_MIN_ROLLCOUNT.[7]}}</b> Rolls</td>
                 {{else}}
@@ -378,7 +378,7 @@
                 {{/ifRolledCrit}}
             </tr>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MAX_PLAYER.[7]}}
+                {{#ifRolledCrit ROLLED_MOST_MAX_ROLLCOUNT.[7]}}
                     <td>Most Rolled 20's</td>
                     <td><b>{{ROLLED_MOST_MAX_PLAYER.[7]}}</b> with <b>{{ROLLED_MOST_MAX_ROLLCOUNT.[7]}}</b> Rolls</td>
                 {{else}}
@@ -416,10 +416,10 @@
         
         {{#ifDieUsed TOTAL_ROLLS.[8] }}
         <h1>D-20 Stats</h1>
-        <div id = "d100Chart" class="chart-dice-stats"></div>
+        <div id = "d100ChartGlobal" class="chart-dice-stats"></div>
         <table>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MIN_PLAYER.[8]}}
+                {{#ifRolledCrit ROLLED_MOST_MIN_ROLLCOUNT.[8]}}
                     <td>Most Rolled 1's</td>
                     <td><b>{{ROLLED_MOST_MIN_PLAYER.[8]}}</b> with <b>{{ROLLED_MOST_MIN_ROLLCOUNT.[8]}}</b> Rolls</td>
                 {{else}}
@@ -428,7 +428,7 @@
                 {{/ifRolledCrit}}
             </tr>
             <tr>
-                {{#ifRolledCrit ROLLED_MOST_MAX_PLAYER.[8]}}
+                {{#ifRolledCrit ROLLED_MOST_MAX_ROLLCOUNT.[8]}}
                     <td>Most Rolled 100's</td>
                     <td><b>{{ROLLED_MOST_MAX_PLAYER.[8]}}</b> with <b>{{ROLLED_MOST_MAX_ROLLCOUNT.[8]}}</b> Rolls</td>
                 {{else}}
@@ -461,6 +461,9 @@
             </tr>
         </table>
         {{/ifDieUsed}}
+        <div>
+            <button type="button" data-action="refresh">Refresh Stats</button>
+        </div>
     </div>
 
 
@@ -521,7 +524,7 @@
             ]);
 
             // Instantiate and draw the chart.
-            var chart = new google.visualization.ColumnChart(document.getElementById('d2Chart'));
+            var chart = new google.visualization.ColumnChart(document.getElementById('d2ChartGlobal'));
             chart.draw(data, options);
         }
 
@@ -535,7 +538,7 @@
             ]);
 
             // Instantiate and draw the chart.
-            var chart = new google.visualization.ColumnChart(document.getElementById('d3Chart'));
+            var chart = new google.visualization.ColumnChart(document.getElementById('d3ChartGlobal'));
             chart.draw(data, chartOptions);
         }
 
@@ -550,7 +553,7 @@
             ]);
 
             // Instantiate and draw the chart.
-            var chart = new google.visualization.ColumnChart(document.getElementById('d4Chart'));
+            var chart = new google.visualization.ColumnChart(document.getElementById('d4ChartGlobal'));
             chart.draw(data, chartOptions);
         }
 
@@ -567,7 +570,7 @@
             ]);
 
             // Instantiate and draw the chart.
-            var chart = new google.visualization.ColumnChart(document.getElementById('d6Chart'));
+            var chart = new google.visualization.ColumnChart(document.getElementById('d6ChartGlobal'));
             chart.draw(data, chartOptions);
         }
 
@@ -587,7 +590,7 @@
             ]);
 
             // Instantiate and draw the chart.
-            var chart = new google.visualization.ColumnChart(document.getElementById('d8Chart'));
+            var chart = new google.visualization.ColumnChart(document.getElementById('d8ChartGlobal'));
             chart.draw(data, chartOptions);
         }
 
@@ -608,7 +611,7 @@
             ]);
 
             // Instantiate and draw the chart.
-            var chart = new google.visualization.ColumnChart(document.getElementById('d10Chart'));
+            var chart = new google.visualization.ColumnChart(document.getElementById('d10ChartGlobal'));
             chart.draw(data, chartOptions);
         }
 
@@ -631,7 +634,7 @@
             ]);
 
             // Instantiate and draw the chart.
-            var chart = new google.visualization.ColumnChart(document.getElementById('d12Chart'));
+            var chart = new google.visualization.ColumnChart(document.getElementById('d12ChartGlobal'));
             chart.draw(data, chartOptions);
         }
 
@@ -662,7 +665,7 @@
             ]);
 
             // Instantiate and draw the chart.
-            var chart = new google.visualization.ColumnChart(document.getElementById('d20Chart'));
+            var chart = new google.visualization.ColumnChart(document.getElementById('d20ChartGlobal'));
             chart.draw(data, chartOptions);
         }
 
