--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -11,14 +11,21 @@
 
     <!-- Example of using en.json values <li>{{localize "DICE_STATS_TEXT.player-stats-button-title"}} : {{testhandle}}</li>-->
     <div class="row">
-        <input type="checkbox" data-action="d2checkbox"     {{IS_DIE_DISPLAYED.[0]}}>D-2</input>
-        <input type="checkbox" data-action="d4checkbox"     {{IS_DIE_DISPLAYED.[2]}}>D-4</input>
-        <input type="checkbox" data-action="d20checkbox"    {{IS_DIE_DISPLAYED.[7]}}>D-20</input>
+        <input type="checkbox" data-action="d2checkbox"     {{{isChecked IS_DIE_DISPLAYED.[0]}}}>D-2</input>
+        <input type="checkbox" data-action="d3checkbox"    {{{isChecked IS_DIE_DISPLAYED.[1]}}}>D-3</input>
+        <input type="checkbox" data-action="d4checkbox"     {{{isChecked IS_DIE_DISPLAYED.[2]}}}>D-4</input>
+        <input type="checkbox" data-action="d6checkbox"    {{{isChecked IS_DIE_DISPLAYED.[3]}}}>D-6</input>
+        <input type="checkbox" data-action="d8checkbox"    {{{isChecked IS_DIE_DISPLAYED.[4]}}}>D-8</input>
+        <input type="checkbox" data-action="d10checkbox"    {{{isChecked IS_DIE_DISPLAYED.[5]}}}>D-10</input>
+        <input type="checkbox" data-action="d12checkbox"    {{{isChecked IS_DIE_DISPLAYED.[6]}}}>D-12</input>
+        <input type="checkbox" data-action="d20checkbox"    {{{isChecked IS_DIE_DISPLAYED.[7]}}}>D-20</input>
+        <input type="checkbox" data-action="d100checkbox"    {{{isChecked IS_DIE_DISPLAYED.[8]}}}>D-100</input>
     </div>
 
     <div class="col">
         <h1 class="dice-type-title">{{PLAYER_NAME}} Roll Data</h1>
 
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[0]}}
         {{#ifDieUsed TOTAL_ROLLS.[0] }} <!-- Associated Helper in Main -->
         <h1 class="dice-type-title">D-2 (COIN) Stats</h1>
         <div id = "d2Chart" class="chart-dice-stats"></div>
@@ -54,8 +61,10 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
 
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[1]}}
         {{#ifDieUsed TOTAL_ROLLS.[1] }}
         <h1>D-3 (Fate) Stats</h1>
         <div id = "d3Chart" class="chart-dice-stats"></div>
@@ -91,8 +100,10 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
         
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[2]}}
         {{#ifDieUsed TOTAL_ROLLS.[2] }}
         <h1>D-4 Stats</h1>
         <div id = "d4Chart" class="chart-dice-stats"></div>
@@ -128,8 +139,10 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
         
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[3]}}
         {{#ifDieUsed TOTAL_ROLLS.[3] }}
         <h1>D-6 Stats</h1>
         <div id = "d6Chart" class="chart-dice-stats"></div>
@@ -165,8 +178,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[4]}}
         {{#ifDieUsed TOTAL_ROLLS.[4] }}
         <h1>D-8 Stats</h1>
         <div id = "d8Chart" class="chart-dice-stats"></div>
@@ -202,8 +216,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[5]}}
         {{#ifDieUsed TOTAL_ROLLS.[5] }}
         <h1>D-10 Stats</h1>
         <div id = "d10Chart" class="chart-dice-stats"></div>
@@ -239,8 +254,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[6]}}
         {{#ifDieUsed TOTAL_ROLLS.[6] }}
         <h1>D-12 Stats</h1>
         <div id = "d12Chart" class="chart-dice-stats"></div>
@@ -276,8 +292,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[7]}}
         {{#ifDieUsed TOTAL_ROLLS.[7] }}
         <h1 class="dice-type-title">D-20 Stats</h1>
         <div id = "d20Chart" class="chart-dice-stats"></div>
@@ -313,8 +330,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[8]}}
         {{#ifDieUsed TOTAL_ROLLS.[8] }}
         <h1>D-20 Stats</h1>
         <div id = "d100Chart" class="chart-dice-stats"></div>
@@ -349,6 +367,7 @@
             </tr>
         </table>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
 
         <br>
         <div>
