update Button CSS

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -10,16 +10,16 @@
     </head>
 
     <!-- Example of using en.json values <li>{{localize "DICE_STATS_TEXT.player-stats-button-title"}} : {{testhandle}}</li>-->
-    <div class="row">
-        <input type="checkbox" data-action="d2checkbox"     {{{isChecked IS_DIE_DISPLAYED.[0]}}}>D-2</input>
-        <input type="checkbox" data-action="d3checkbox"    {{{isChecked IS_DIE_DISPLAYED.[1]}}}>D-3</input>
-        <input type="checkbox" data-action="d4checkbox"     {{{isChecked IS_DIE_DISPLAYED.[2]}}}>D-4</input>
-        <input type="checkbox" data-action="d6checkbox"    {{{isChecked IS_DIE_DISPLAYED.[3]}}}>D-6</input>
-        <input type="checkbox" data-action="d8checkbox"    {{{isChecked IS_DIE_DISPLAYED.[4]}}}>D-8</input>
-        <input type="checkbox" data-action="d10checkbox"    {{{isChecked IS_DIE_DISPLAYED.[5]}}}>D-10</input>
-        <input type="checkbox" data-action="d12checkbox"    {{{isChecked IS_DIE_DISPLAYED.[6]}}}>D-12</input>
-        <input type="checkbox" data-action="d20checkbox"    {{{isChecked IS_DIE_DISPLAYED.[7]}}}>D-20</input>
-        <input type="checkbox" data-action="d100checkbox"    {{{isChecked IS_DIE_DISPLAYED.[8]}}}>D-100</input>
+    <div class="form-checkboxes">
+        <input type="checkbox" class="form-checkboxes" data-action="d2checkbox"     {{{isChecked IS_DIE_DISPLAYED.[0]}}}><span class="form-checkboxes">D-2</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d3checkbox"    {{{isChecked IS_DIE_DISPLAYED.[1]}}}><span class="form-checkboxes">D-3</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d4checkbox"     {{{isChecked IS_DIE_DISPLAYED.[2]}}}><span class="form-checkboxes">D-4</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d6checkbox"    {{{isChecked IS_DIE_DISPLAYED.[3]}}}><span class="form-checkboxes">D-6</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d8checkbox"    {{{isChecked IS_DIE_DISPLAYED.[4]}}}><span class="form-checkboxes">D-8</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d10checkbox"    {{{isChecked IS_DIE_DISPLAYED.[5]}}}><span class="form-checkboxes">D-10</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d12checkbox"    {{{isChecked IS_DIE_DISPLAYED.[6]}}}><span class="form-checkboxes">D-12</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d20checkbox"    {{{isChecked IS_DIE_DISPLAYED.[7]}}}><span class="form-checkboxes">D-20</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d100checkbox"    {{{isChecked IS_DIE_DISPLAYED.[8]}}}><span class="form-checkboxes">D-100</span></input>
     </div>
 
     <div class="col">
