--- a/styles/dice-stats.css
+++ b/styles/dice-stats.css
@@ -32,3 +32,16 @@
     margin: auto;
     text-align: center;
 }
+
+input.form-checkboxes{
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    text-align: center;
+    white-space: nowrap;
+}
+
+span.form-checkboxes{
+    vertical-align: middle;
+    font-size: 18px
+}
