--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -10,10 +10,22 @@
     </head>
 
     <!-- Example of using en.json values <li>{{localize "DICE_STATS_TEXT.player-stats-button-title"}} : {{testhandle}}</li>-->
+    <div class="form-checkboxes">
+        <input type="checkbox" class="form-checkboxes" data-action="d2checkbox"     {{{isChecked IS_DIE_DISPLAYED.[0]}}}><span class="form-checkboxes">D-2</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d3checkbox"    {{{isChecked IS_DIE_DISPLAYED.[1]}}}><span class="form-checkboxes">D-3</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d4checkbox"     {{{isChecked IS_DIE_DISPLAYED.[2]}}}><span class="form-checkboxes">D-4</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d6checkbox"    {{{isChecked IS_DIE_DISPLAYED.[3]}}}><span class="form-checkboxes">D-6</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d8checkbox"    {{{isChecked IS_DIE_DISPLAYED.[4]}}}><span class="form-checkboxes">D-8</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d10checkbox"    {{{isChecked IS_DIE_DISPLAYED.[5]}}}><span class="form-checkboxes">D-10</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d12checkbox"    {{{isChecked IS_DIE_DISPLAYED.[6]}}}><span class="form-checkboxes">D-12</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d20checkbox"    {{{isChecked IS_DIE_DISPLAYED.[7]}}}><span class="form-checkboxes">D-20</span></input>
+        <input type="checkbox" class="form-checkboxes" data-action="d100checkbox"    {{{isChecked IS_DIE_DISPLAYED.[8]}}}><span class="form-checkboxes">D-100</span></input>
+    </div>
 
     <div class="col">
         <h1 class="dice-type-title"> GLOBAL Roll Data</h1>
 
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[0]}}
         {{#ifDieUsed TOTAL_ROLLS.[0] }} <!-- Associated Helper in Main -->
         <h1 class="dice-type-title">D-2 (COIN) Stats</h1>
         <div id = "d2ChartGlobal" class="chart-dice-stats"></div>
@@ -62,8 +74,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
-        
+        {{/ifDisplayDieInfo}}
 
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[1]}}
         {{#ifDieUsed TOTAL_ROLLS.[1] }}
         <h1>D-3 (Fate) Stats</h1>
         <div id = "d3ChartGlobal" class="chart-dice-stats"></div>
@@ -112,8 +125,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[2]}}
         {{#ifDieUsed TOTAL_ROLLS.[2] }}
         <h1>D-4 Stats</h1>
         <div id = "d4ChartGlobal" class="chart-dice-stats"></div>
@@ -162,8 +176,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[3]}}
         {{#ifDieUsed TOTAL_ROLLS.[3] }}
         <h1>D-6 Stats</h1>
         <div id = "d6ChartGlobal" class="chart-dice-stats"></div>
@@ -212,8 +227,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[4]}}
         {{#ifDieUsed TOTAL_ROLLS.[4] }}
         <h1>D-8 Stats</h1>
         <div id = "d8ChartGlobal" class="chart-dice-stats"></div>
@@ -262,8 +278,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
-        
-        
+        {{/ifDisplayDieInfo}}
+
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[5]}}
         {{#ifDieUsed TOTAL_ROLLS.[5] }}
         <h1>D-10 Stats</h1>
         <div id = "d10ChartGlobal" class="chart-dice-stats"></div>
@@ -312,8 +329,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[6]}}
         {{#ifDieUsed TOTAL_ROLLS.[6] }}
         <h1>D-12 Stats</h1>
         <div id = "d12ChartGlobal" class="chart-dice-stats"></div>
@@ -362,8 +380,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[7]}}
         {{#ifDieUsed TOTAL_ROLLS.[7] }}
         <h1 class="dice-type-title">D-20 Stats</h1>
         <div id = "d20ChartGlobal" class="chart-dice-stats"></div>
@@ -412,8 +431,9 @@
         </table>
         <br>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         
-        
+        {{#ifDisplayDieInfo IS_DIE_DISPLAYED.[8]}}
         {{#ifDieUsed TOTAL_ROLLS.[8] }}
         <h1>D-20 Stats</h1>
         <div id = "d100ChartGlobal" class="chart-dice-stats"></div>
@@ -461,6 +481,7 @@
             </tr>
         </table>
         {{/ifDieUsed}}
+        {{/ifDisplayDieInfo}}
         <div>
             <button type="button" data-action="refresh">Refresh Stats</button>
         </div>
@@ -669,47 +690,47 @@
             chart.draw(data, chartOptions);
         }
 
-         if({{TOTAL_ROLLS.[0]}} > 0)
+        if({{TOTAL_ROLLS.[0]}} > 0 && {{IS_DIE_DISPLAYED.[0]}})
         {
             google.charts.setOnLoadCallback(drawChartd2);
         }
 
-        if({{TOTAL_ROLLS.[1]}} > 0)
+        if({{TOTAL_ROLLS.[1]}} > 0 && {{IS_DIE_DISPLAYED.[1]}})
         {
             google.charts.setOnLoadCallback(drawChartd3);
         }
 
-        if({{TOTAL_ROLLS.[2]}} > 0)
+        if({{TOTAL_ROLLS.[2]}} > 0 && {{IS_DIE_DISPLAYED.[2]}})
         {
             google.charts.setOnLoadCallback(drawChartd4);
         }
 
-        if({{TOTAL_ROLLS.[3]}} > 0)
+        if({{TOTAL_ROLLS.[3]}} > 0 && {{IS_DIE_DISPLAYED.[3]}})
         {
             google.charts.setOnLoadCallback(drawChartd6);
         }
 
-        if({{TOTAL_ROLLS.[4]}} > 0)
+        if({{TOTAL_ROLLS.[4]}} > 0 && {{IS_DIE_DISPLAYED.[4]}})
         {
             google.charts.setOnLoadCallback(drawChartd8);
         }
 
-        if({{TOTAL_ROLLS.[5]}} > 0)
+        if({{TOTAL_ROLLS.[5]}} > 0 && {{IS_DIE_DISPLAYED.[5]}})
         {
             google.charts.setOnLoadCallback(drawChartd10);
         }
 
-        if({{TOTAL_ROLLS.[6]}} > 0)
+        if({{TOTAL_ROLLS.[6]}} > 0 && {{IS_DIE_DISPLAYED.[6]}})
         {
             google.charts.setOnLoadCallback(drawChartd12);
         }
 
-        if({{TOTAL_ROLLS.[7]}} > 0)
+        if({{TOTAL_ROLLS.[7]}} > 0 && {{IS_DIE_DISPLAYED.[7]}})
         {
             google.charts.setOnLoadCallback(drawChartd20);
         }
 
-        if({{TOTAL_ROLLS.[8]}} > 0)
+        if({{TOTAL_ROLLS.[8]}} > 0 && {{IS_DIE_DISPLAYED.[8]}})
         {
             //google.charts.setOnLoadCallback(drawChartd100);
         }
