Update Docs to Create New release

--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -690,6 +690,7 @@
             chart.draw(data, chartOptions);
         }
 
+        //Checks to See if charts callback should be made
         if({{TOTAL_ROLLS.[0]}} > 0 && {{IS_DIE_DISPLAYED.[0]}})
         {
             google.charts.setOnLoadCallback(drawChartd2);
