--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -22,6 +22,13 @@
         <input type="checkbox" class="form-checkboxes" data-action="d100checkbox"    {{{isChecked IS_DIE_DISPLAYED.[8]}}}><span class="form-checkboxes">D-100</span></input>
     </div>
 
+    {{#ifIsGM}}
+    <div class="blind-roll-rollcount">
+        <h2>There Are {{BLIND_ROLL_COUNT}} Total Blind rolls between all players</h2>
+        <button type="button" data-action="pushBlindRolls" class="blind-roll-rollcount">Push Blind Rolls to Player Data</button>
+    </div>
+    {{/ifIsGM}}
+
     <div class="col">
         <h1 class="dice-type-title"> GLOBAL Roll Data</h1>
 
